# ji

./: .gitignore  SKILL.md  pyproject.toml
src/ji/: __init__.py  __main__.py  add.py  cli.py  get.py  init_.py  search.py  stats.py  utils.py
