[project]
name = "ji"
version = "0.1.0"
description = "Journal Interface — CLI for AI-assisted journaling with markdown storage"
authors = []
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ji = "ji.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ji*"]
